--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,3 +17,5 @@ Werkzeug==2.0.1  # Keeping this version for now
 twelvedata[pandas]==1.2.24
 sqlalchemy==2.0.36
 sec-api==1.0.25
+flask-jwt-extended==4.7.1
+bcrypt==4.3.0
